[gd_scene load_steps=4 format=3 uid="uid://pht8yo26tl6b"]

[ext_resource type="Script" path="res://addons/game_variable/ui/base/variable_item.gd" id="1_qud8k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u0hyf"]
bg_color = Color(0.190762, 0.190762, 0.190762, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1ih2a"]
font_color = Color(0, 0.756863, 0.631373, 0.866667)

[node name="VariableItem" type="PanelContainer"]
custom_minimum_size = Vector2(0, 42)
theme_override_styles/panel = SubResource("StyleBoxFlat_u0hyf")
script = ExtResource("1_qud8k")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HSplitContainer" parent="MarginContainer"]
layout_mode = 2
split_offset = 1080
dragger_visibility = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="VariableLabel" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "progress"

[node name="VariableType" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Bool"
label_settings = SubResource("LabelSettings_1ih2a")

[node name="ValueInt" type="SpinBox" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="ValueString2" type="LineEdit" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "111"

[node name="ValueBool" type="CheckBox" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
button_pressed = true
